# live-subtitle-overlay

./: .env.example  README.md  SESSION_HANDOFF.md  pyproject.toml
docs/: WINDOWS_FIRST_RUN.md
scripts/: windows-first-run.ps1
src/live_subtitle_overlay/: __init__.py  app.py  asr.py  audio.py  config.py  diagnostics.py  models.py  pipeline.py  settings.py  translation.py  ui.py
tests/: test_config.py  test_diagnostics.py  test_pipeline.py  test_settings.py
